Update 02.09.24 Notes Computer Science 1.md

--- a/CollegeNotes/02.09.24 Notes Computer Science 1.md
+++ b/CollegeNotes/02.09.24 Notes Computer Science 1.md
@@ -44,12 +44,14 @@ int main(void) {
 ```
 
 ## Combinations
-Given a budget and a list of items, you can buy one of each with a cost. Coose the subset of items such that the sum <= budget and its the highest
+Given a budget and a list of items, you can buy one of each with a cost. Choose the subset of items such that the sum <= budget and its the highest
 
 ```c
-for(int t1 = 0; t1 <= 1; t++) {
+// highly inefficient and we would have to program as many arrays with input
+for(int t1 = 0; t1 <= 1; t1++) {
 	for(int t2 = 0; t2 <= 1; t2++) {
-		// repeat the loop 3 more times
+		// repeat the loop n more times
+		// ...
 	}
 }
 ```
