Update 02.12.24 Notes Computer Science 1.md

--- a/CollegeNotes/02.12.24 Notes Computer Science 1.md
+++ b/CollegeNotes/02.12.24 Notes Computer Science 1.md
@@ -49,3 +49,7 @@ int main() {
 	kgap(perm, used, 0, n, k);
 }
 ```
+![](Written_notes/IMG_0480.jpg)
+![](Written_notes/IMG_0481.jpg)
+![[IMG_0482.JPG]]
+![[IMG_0483.JPG]]
