correct path to images

--- a/CollegeNotes/02.16.24 Notes Computer Science 1.md
+++ b/CollegeNotes/02.16.24 Notes Computer Science 1.md
@@ -11,7 +11,7 @@ BS(n, value, arr) {
 		
 }
 ```
-![Notes from 02.16.24](Written_Notes/IMG_0487.jpg)
-![Notes from 02.16.24](Written_Notes/IMG_0488.jpg)
-![Latest notes](/Written_Notes/IMG_0489.jpg)
+![Notes from 02.16.24](Written_notes/IMG_0487.jpg)
+![Notes from 02.16.24](Written_notes/IMG_0488.jpg)
+![Latest notes](/Written_notes/IMG_0489.jpg)
 
