--- a/CollegeNotes/01.17.24 Notes Computer Science 1.md
+++ b/CollegeNotes/01.17.24 Notes Computer Science 1.md
@@ -52,3 +52,14 @@ int main() {
 
 ## Realloc
 `realloc(old heap pointer, new allocation size in # of bytes)` 
+
+```c title=linked_list_code fold
+#include <stdio.h>
+#include <stdlib.h>
+
+typedef struct Node Node;
+Node {
+	int data;
+	Node * next;
+}
+```
