--- a/CollegeNotes/01.31.24 Notes Computer Science 1.md
+++ b/CollegeNotes/01.31.24 Notes Computer Science 1.md
@@ -35,11 +35,11 @@ Applications of the stack
 We use postfix expression (reverse polish notation) have operators after the operands
 **Note: operators immediately follow operands and are executed in order of appearance left to right** (first operation we see, first one we perform)
 
-Infix: 3 * 2 + 1
-Postfix: 3 2 * 1 + 
+Infix: 3 \* 2 + 1
+Postfix: 3 2 \* 1 + 
 
-Infix: 4 + 2 * 3
-Postfix: 4 2 3 * +
+Infix: 4 + 2 \* 3
+Postfix: 4 2 3 \* +
 
 - 2 steps for evaluating infix
 	1. Convert to postfix first
