--- a/CollegeNotes/02.02.24 Notes Computer Science 1.md
+++ b/CollegeNotes/02.02.24 Notes Computer Science 1.md
@@ -4,7 +4,7 @@ Stack is an abstract data type.
 
 ```c
 #include <stdio.h>
-#incldue <stdlib.h>
+#include <stdlib.h>
 #include <assert.h> 
 
 typedef struct Node Node;
